# EventBus

./: CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: Benchmarks.cpp
include/: EventBus.h  IEvent.h
scripts/: clang-format.sh  clang-tidy.sh  valgrind.sh
superfactory/: SuperFactory.h
superqueue/: SuperQueue.h  SuperQueueCore.h  SuperQueueImpl.h
tests/: AllTests.cpp  EventBusTest.h  SuperFactoryTest.h  SuperQueueTest.h
